@@ -18,6 +18,9 @@
 RedirectMatch /foswiki/?$ /foswiki/bin/view$1
 RedirectMatch /foswiki(/([A-Z].*)?)?$ /foswiki/bin/view$1
 
+#support the cgi-bin url's
+RedirectMatch /cgi-bin/foswiki/?$ /foswiki/bin/$1
+
 #see /etc/foswiki/ShorterUrl.conf to activate ShorterUrls
 
 # The ScriptAlias defines the bin directory as a directory where CGI
@@ -25,7 +28,7 @@ RedirectMatch /foswiki(/([A-Z].*)?)?$ /foswiki/bin/view$1
 # The first parameter will be part of the URL to your installation e.g.
 # http://my.co.uk/foswiki/bin/view/...
 # The second parameter must point to the physical path on your disc.
-ScriptAlias /foswiki/bin "/usr/share/foswiki/bin"
+ScriptAlias /foswiki/bin "/var/lib/foswiki/bin"
 
 # The Alias defines a url that points to the root of the foswiki installation.
 # It is used to access files in the pub directory (attachments etc)
@@ -40,7 +43,7 @@ SetEnvIf Request_URI "foswiki/pub/System/.*\.[hH][tT][mM][lL]?$" !blockAccess
 # This specifies the options on the Foswiki scripts directory. The ExecCGI
 # and SetHandler tell apache that it contains scripts. "Allow from all"
 # lets any IP address access this URL.
-<Directory "/usr/share/foswiki/bin">
+<Directory "/var/lib/foswiki/bin">
     AllowOverride all
     Order Allow,Deny
     Allow from all
