@@ -2,4 +2,4 @@ var/lib/foswiki
 var/log/foswiki
 etc/foswiki
 usr/share/doc/foswiki
-usr/share/foswiki/bin
+usr/share/foswiki
